--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "angular-in-memory-web-api": "^0.3.2",
+    "angular2-modal": "^3.0.3",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ngx-bootstrap": "^1.9.3",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
