--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
+    "@angular/common": "^4.3.6",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.4",
+    "angular-confirmation-popover": "^3.2.0",
     "angular-in-memory-web-api": "^0.3.2",
-    "angular2-modal": "^3.0.3",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
-    "ngx-bootstrap": "^1.9.3",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
